--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ Phone: +1 856-904-6600 <br />
 Email: long DOT feng AT yale DOT edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on variable selection, high-dimensional statistics, empirical Bayes and imaging-genetics. Before coming to Yale, I obtained my Ph.D in Statistics from Rutgers University, and advised by Profs. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
+<p>I am a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on variable selection, high-dimensional statistics, empirical Bayes and imaging-genetics. Before coming to Yale, I obtained my Ph.D in Statistics from Rutgers University, and advised by Profs. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee H. Dicker</a>. </p>
 <h2>Education</h2>
 <ul>
-<li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
+<li><p>2017, Ph.D. in Statistics, Rutgers University, Advisors: Cun-Hui Zhang and Lee H. Dicker  </p>
 </li>
 <li><p>2012, B.S. in Statistics and Mathematics, Renmin University of China</p>
 </li>
@@ -49,7 +49,6 @@ Email: long DOT feng AT yale DOT edu</p>
 <li><p>Imaging genetics</p>
 </li>
 </ul>
-<p><a href="cv.pdf">A brief cv</a>.</p>
 </td>
 </tr>
 </table>
