--- a/research.html
+++ b/research.html
@@ -31,8 +31,9 @@ Inference for Mixture Models via Convex Optimization"",  Computational Statistic
 Approximate Message Passing"", Proceedings of IEEE Conf. on Information
 Sciences and Systems (CISS). [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
 </li>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2017+). "Sorted Concave Penalized Regression"", Submitted,
-Annals of Statistics. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2017+). "Sorted Concave Penalized Regression"", Submitted. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
+</li>
+<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2017+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study"", Submitted.</p>
 </li>
 </ul>
 </td>
