--- a/research.html
+++ b/research.html
@@ -23,17 +23,17 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2017+). "Sorted Concave Penalized Regression", Submitted. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
+</li>
+<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2017+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Submitted.</p>
+</li>
 <li><p><b>Feng, L.</b> and Dicker, L.H. (2017+). "Approximate Nonparametric Maximum Likelihood
-Inference for Mixture Models via Convex Optimization"",  Computational Statistics
+Inference for Mixture Models via Convex Optimization",  Computational Statistics
 &amp; Data Analysis. To appear. [<a href="https://arxiv.org/abs/1606.02011">arXiv</a>]</p>
 </li>
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
-Approximate Message Passing"", Proceedings of IEEE Conf. on Information
+Approximate Message Passing", Proceedings of IEEE Conf. on Information
 Sciences and Systems (CISS). [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
-</li>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2017+). "Sorted Concave Penalized Regression"", Submitted. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
-</li>
-<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2017+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study"", Submitted.</p>
 </li>
 </ul>
 </td>
