--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@ Inference for Mixture Models via Convex Optimization",  Computational Statistics
 &amp; Data Analysis, 122, 80-91 [<a href="https://arxiv.org/abs/1606.02011">arXiv</a>][<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>]</p>
 </li>
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
-Approximate Message Passing", Proceedings of IEEE Conf. on Information
+Approximate Message Passing", Proceedings of 51st IEEE Conference on Information
 Sciences and Systems (CISS). [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
 </li>
 </ul>
