--- a/research.html
+++ b/research.html
@@ -23,16 +23,16 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2017+). "Sorted Concave Penalized Regression", Under review. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Sorted Concave Penalized Regression", Annals of Statistics, invited revision. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
 </li>
-<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2017+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Under review.</p>
+<li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Journal of American Statistical Association, under review.</p>
 </li>
-<li><p><b>Feng, L.</b> and Dicker, L.H. (2017+). "Approximate Nonparametric Maximum Likelihood
+<li><p><b>Feng, L.</b> and Dicker, L.H. (2018). "Approximate Nonparametric Maximum Likelihood
 Inference for Mixture Models via Convex Optimization",  Computational Statistics
-&amp; Data Analysis, 122, 80-91 [<a href="https://arxiv.org/abs/1606.02011">arXiv</a>][<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>]</p>
+&amp; Data Analysis, 122, 80-91. [<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>] [<a href="https://arxiv.org/abs/1606.02011">arXiv</a>]</p>
 </li>
-<li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
-Approximate Message Passing", Proceedings of 51st IEEE Conference on Information
+<li><p><b>Feng, L.</b>, Ma, R., and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
+Approximate Message Passing", Proceedings of IEEE Conf. on Information
 Sciences and Systems (CISS). [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
 </li>
 </ul>
