--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <ul>
 <li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Sorted Concave Penalized Regression", Annals of Statistics, invited revision. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
 </li>
-<li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Journal of American Statistical Association, under review.</p>
+<li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Submitted.</p>
 </li>
 <li><p><b>Feng, L.</b> and Dicker, L.H. (2018). "Approximate Nonparametric Maximum Likelihood
 Inference for Mixture Models via Convex Optimization",  Computational Statistics
