--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Sorted Concave Penalized Regression", Annals of Statistics, invited revision. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Sorted Concave Penalized Regression", Annals of Statistics, accepted. [<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
 </li>
 <li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Submitted.</p>
 </li>
