--- a/teaching.html
+++ b/teaching.html
@@ -24,20 +24,20 @@
 <div class="blockcontent">
 <h2>As Lecturer (At Rutgers University)</h2>
 <ul>
-<li><p>STATS 580&ndash;Basic Probability, Graduate Level</p>
+<li><p>STAT 580&ndash;Basic Probability, Graduate Level</p>
 </li>
-<li><p>STATS 586&ndash;Interpretation of Data-I, Graduate Level</p>
+<li><p>STAT 586&ndash;Interpretation of Data-I, Graduate Level</p>
 </li>
 </ul>
 <h2>As Teaching Assistant (At Rutgers University)</h2>
 <ul>
-<li><p>STATS 663&ndash;Regression Theorem, Graduate Level</p>
+<li><p>STAT 663&ndash;Regression Theorem, Graduate Level</p>
 </li>
 <li><p>FSRM 588&ndash;Financial Data Mining, Graduate Level</p>
 </li>
-<li><p>STATS 590&ndash;Experimental Design, Graduate Level</p>
+<li><p>STAT 590&ndash;Experimental Design, Graduate Level</p>
 </li>
-<li><p>STATS 401&ndash;Basic Stat for Research, Undergraduate Level</p>
+<li><p>STAT 401&ndash;Basic Stat for Research, Undergraduate Level</p>
 </li>
 </ul>
 </td>
