--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@ Inference for Mixture Models via Convex Optimization",  Computational Statistics
 &amp; Data Analysis, 122, 80-91. [<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>] [<a href="https://arxiv.org/abs/1606.02011">arXiv</a>]</p>
 </li>
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
-Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
+Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
 </li>
 <li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Submitted.</p>
 </li>
