--- a/research.html
+++ b/research.html
@@ -32,9 +32,9 @@ Inference for Mixture Models via Convex Optimization",  Computational Statistics
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
 Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
 </li>
-<li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Submitted.</p>
+<li><p><b>Feng, L.</b>, Bi,X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", Under review.</p>
 </li>
-<li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2018+)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia". Submitted.</p>
+<li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2018+)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia". Under review.</p>
 </li>
 </ul>
 </td>
