--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Phone: +1 856-904-6600 <br />
 Email: long DOT feng AT yale DOT edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on high-dimensional statistics, tensor and imaging regression, and empirical Bayes methods. Before coming to Yale, I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
+<p>I am a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on high-dimensional statistics, imaging data analysis, and empirical Bayes methods. Before coming to Yale, I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
@@ -41,7 +41,7 @@ Email: long DOT feng AT yale DOT edu</p>
 <h2>Research</h2>
 <p>My research interests include </p>
 <ul>
-<li><p>High-dimensional statistics, variable selection</p>
+<li><p>High-dimensional data analysis, variable selection</p>
 </li>
 <li><p>Imaging data analysis, tensor regression</p>
 </li>
