--- a/research.html
+++ b/research.html
@@ -23,22 +23,26 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018). "Sorted Concave Penalized Regression", Annals of Statistics, accepted. [<a href="https://www.dropbox.com/s/t9auw090f6d0t77/2017-Sorted%20PLSE.pdf?dl=0">Accepted version</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv</a>]</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018). "Sorted Concave Penalized Regression", Annals of Statistics, forthcoming. [<a href="https://www.dropbox.com/s/t9auw090f6d0t77/2017-Sorted%20PLSE.pdf?dl=0">Accepted version</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
 </li>
 <li><p><b>Feng, L.</b> and Dicker, L.H. (2018). "Approximate Nonparametric Maximum Likelihood
 Inference for Mixture Models via Convex Optimization",  Computational Statistics
-&amp; Data Analysis, 122, 80-91. [<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>]</p>
+&amp; Data Analysis, 122, 80-91. [<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>].</p>
 </li>
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
-Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>]</p>
+Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>].</p>
+</li>
+<li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2018+)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", revise &amp; resubmit.</p>
+</li>
+<li><p><b>Feng, L.</b>*, Bi, X.* and Zhang, H. (2018+). "High-order Imaging Regression via Internal Variations", under review.
+[<a href="https://www.dropbox.com/s/zbkxrlui3w5i9v8/Image\\%20reg.pdf?dl=0">link</a>].
+(* indicates contribute equally.)</p>
 </li>
 <li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", under review.
-[<a href="https://www.dropbox.com/s/134fywn1drx53yi/2017-SNBO.pdf?dl=0">link</a>]</p>
-</li>
-<li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2018+)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", under review.</p>
+[<a href="https://www.dropbox.com/s/134fywn1drx53yi/2017-SNBO.pdf?dl=0">link</a>].</p>
 </li>
 <li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Group Lasso under Low-Moment
-Conditions on Random Designs", preprint available. [<a href="https://www.dropbox.com/s/twteq55mv7e5r9r/2018-RE-group-V3b.pdf?dl=0">link</a>]</p>
+Conditions on Random Designs", preprint available. [<a href="https://www.dropbox.com/s/ue6rd7dn1gvqbz8/2018-RE-group-V4.pdf?dl=0">link</a>].</p>
 </li>
 </ul>
 </td>
