--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st
 [<a href="https://www.dropbox.com/s/134fywn1drx53yi/2017-SNBO.pdf?dl=0">PDF</a>].</p>
 </li>
 <li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Group Lasso under Low-Moment
-Conditions on Random Designs", preprint available. [<a href="https://www.dropbox.com/s/ue6rd7dn1gvqbz8/2018-RE-group-V4.pdf?dl=0">pdf</a>].</p>
+Conditions on Random Designs", preprint available. [<a href="https://www.dropbox.com/s/ue6rd7dn1gvqbz8/2018-RE-group-V4.pdf?dl=0">PDF</a>].</p>
 </li>
 </ul>
 </td>
