--- a/research.html
+++ b/research.html
@@ -23,7 +23,9 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018). "Sorted Concave Penalized Regression", Annals of Statistics, forthcoming. [<a href="https://www.dropbox.com/s/t9auw090f6d0t77/2017-Sorted%20PLSE.pdf?dl=0">Accepted version</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics, forthcoming. [<a href="https://www.dropbox.com/s/t9auw090f6d0t77/2017-Sorted%20PLSE.pdf?dl=0">Accepted version</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
+</li>
+<li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2019)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", Genetic Epidemiology, 1-11. [<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gepi.22203">link</a>].</p>
 </li>
 <li><p><b>Feng, L.</b> and Dicker, L.H. (2018). "Approximate Nonparametric Maximum Likelihood
 Inference for Mixture Models via Convex Optimization",  Computational Statistics
@@ -32,17 +34,12 @@ Inference for Mixture Models via Convex Optimization",  Computational Statistics
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
 Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>].</p>
 </li>
-<li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2018+)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", revise &amp; resubmit.</p>
+<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2019+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", revise & resubmit.</p>
 </li>
-<li><p><b>Feng, L.</b>*, Bi, X.* and Zhang, H. (2018+). "High-order Imaging Regression via Internal Variations", under review.
-[<a href="https://www.dropbox.com/s/zbkxrlui3w5i9v8/Image\\%20reg.pdf?dl=0">PDF</a>].
-(* indicates contribute equally.)</p>
+<li><p><b>Feng, L.</b>*, Bi, X.* and Zhang, H. (2019+). "High-order Imaging Regression via Internal Variations", under review. (* indicates contribute equally.)</p>
 </li>
-<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2018+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", under review.
-[<a href="https://www.dropbox.com/s/134fywn1drx53yi/2017-SNBO.pdf?dl=0">PDF</a>].</p>
-</li>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2018+). "Group Lasso under Low-Moment
-Conditions on Random Designs", preprint available. [<a href="https://www.dropbox.com/s/ue6rd7dn1gvqbz8/2018-RE-group-V4.pdf?dl=0">PDF</a>].</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019+). "Group Lasso under Low-Moment
+Conditions on Random Designs", preprint available. </p>
 </li>
 </ul>
 </td>
