--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="bio.jpeg" alt="alt text" width="170px" height="170px" />&nbsp;</td>
-<td align="left"><p>Postdoctoral Associate <br /> <a href="https://publichealth.yale.edu/biostat/">Department of Biostatistics</a> <br />
-Yale University <br />
-300 George St, Suite 523<br />
-New Haven, CT 06511, USA <br />
-Phone: +1 856-904-6600 <br />
-Email: long DOT feng AT yale DOT edu</p>
+<td align="left"><p>Assistant Professor <br /> 
+School of Data Science <br />
+City University of Hong Kong<br />
+Email: longfeng AT cityu DOT edu DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on high-dimensional statistics, imaging data analysis, and empirical Bayes methods. Before coming to Yale, I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
+<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on high-dimensional statistics, imaging data analysis, and empirical Bayes methods. I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
@@ -43,7 +41,7 @@ Email: long DOT feng AT yale DOT edu</p>
 <ul>
 <li><p>High-dimensional data analysis, variable selection</p>
 </li>
-<li><p>Imaging data analysis, tensor regression</p>
+<li><p>Imaging data analysis, matrix decomposition, tensor regression</p>
 </li>
 <li><p>Empirical Bayes methods</p>
 </li>
