--- a/teaching.html
+++ b/teaching.html
@@ -22,22 +22,16 @@
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<h2>As Lecturer (At Rutgers University)</h2>
+<h2>At CityU</h2>
 <ul>
-<li><p>STAT 580&ndash;Basic Probability, Graduate Level</p>
-</li>
-<li><p>STAT 586&ndash;Interpretation of Data-I, Graduate Level</p>
+<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020</p>
 </li>
 </ul>
-<h2>As Teaching Assistant (At Rutgers University)</h2>
+<h2>At Rutgers</h2>
 <ul>
-<li><p>STAT 663&ndash;Regression Theorem, Graduate Level</p>
+<li><p>STAT 580&ndash;Basic Probability, Summer 2017</p>
 </li>
-<li><p>FSRM 588&ndash;Financial Data Mining, Graduate Level</p>
-</li>
-<li><p>STAT 590&ndash;Experimental Design, Graduate Level</p>
-</li>
-<li><p>STAT 401&ndash;Basic Stat for Research, Undergraduate Level</p>
+<li><p>STAT 586&ndash;Interpretation of Data-I, Summer 2016</p>
 </li>
 </ul>
 </td>
