--- a/teaching.html
+++ b/teaching.html
@@ -24,14 +24,14 @@
 <div class="blockcontent">
 <h2>At CityU</h2>
 <ul>
-<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020</p>
+<li><p>SDSC 6001&ndash;Statistical Machine Learning II, Spring 2020</p>
 </li>
 </ul>
 <h2>At Rutgers</h2>
 <ul>
 <li><p>STAT 580&ndash;Basic Probability, Summer 2017</p>
 </li>
-<li><p>STAT 586&ndash;Interpretation of Data-I, Summer 2016</p>
+<li><p>STAT 586&ndash;Interpretation of Data I, Summer 2016</p>
 </li>
 </ul>
 </td>
