--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <ul>
 <li><p><b>Feng, L.</b>*, Bi, X.* and Zhang, H. (2020+). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association, forthcoming. (* indicates contribute equally.)</p>
 </li>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics, 47<i>6. 3069-3098. doi:10.1214</i>18-AOS1759. [<a href="https://projecteuclid.org/euclid.aos/1572487384">https://projecteuclid.org/euclid.aos/1572487384</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics, 47/6. 3069-3098. [<a href="https://projecteuclid.org/euclid.aos/1572487384">Journal version</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
 </li>
 <li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2019)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", Genetic Epidemiology, 1-11. [<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gepi.22203">link</a>].</p>
 </li>
