--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ City University of Hong Kong<br />
 Email: longfeng AT cityu DOT edu DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on high-dimensional statistics, imaging data analysis, and empirical Bayes methods. I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
+<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. My current research interests focus on high-dimensional statistics, imaging data analysis, matrix decomposition, and empirical Bayes methods.</p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
