--- a/research.html
+++ b/research.html
@@ -23,7 +23,12 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics, forthcoming. [<a href="https://www.dropbox.com/s/t9auw090f6d0t77/2017-Sorted%20PLSE.pdf?dl=0">Accepted version</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
+<li><p><b>Feng, L.</b> (2020+). "Projected Robust PCA with Application to Smooth Image Recovery
+". [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
+</li>
+<li><p><b>Feng, L.</b>*, Bi, X.* and Zhang, H. (2020+). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association, [<a href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2020.1766468">link</a>].(* indicates contribute equally.)</p>
+</li>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics, 47<i>6. 3069-3098. doi:10.1214</i>18-AOS1759. [<a href="https://projecteuclid.org/euclid.aos/1572487384">https://projecteuclid.org/euclid.aos/1572487384</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
 </li>
 <li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2019)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", Genetic Epidemiology, 1-11. [<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gepi.22203">link</a>].</p>
 </li>
@@ -33,13 +38,6 @@ Inference for Mixture Models via Convex Optimization",  Computational Statistics
 </li>
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
 Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>].</p>
-</li>
-<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2019+). "Variable Selection in Modeling Sequentially Nested Binary Outcomes with Application to an Infertility Treatment Study", revise & resubmit.</p>
-</li>
-<li><p><b>Feng, L.</b>*, Bi, X.* and Zhang, H. (2019+). "High-order Imaging Regression via Internal Variations", under review. (* indicates contribute equally.)</p>
-</li>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019+). "Group Lasso under Low-Moment
-Conditions on Random Designs", preprint available. </p>
 </li>
 </ul>
 </td>
