--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ City University of Hong Kong<br />
 Email: longfeng AT cityu DOT edu DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University under the supervision of Prof. <a href="https://publichealth.yale.edu/people/heping_zhang.profile">Heping Zhang</a>. My current research interests focus on imaging data analysis, high-dimensional statistics, and empirical Bayes methods. I obtained my Ph.D in Statistics from Rutgers University, and advised by Prof. <a href="https://stat.rutgers.edu/home/cunhui/">Cun-Hui Zhang</a> and Prof. <a href="https://stat.rutgers.edu/home/ldicker/Home.html">Lee Dicker</a>. </p>
+<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University.  My current research interests focus on imaging data analysis, including image regression, image clustering, image denoising, region detection in image data, etc. I obtained my Ph.D in Statistics from Rutgers University. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
@@ -39,11 +39,9 @@ Email: longfeng AT cityu DOT edu DOT hk</p>
 <h2>Research</h2>
 <p>My research interests include </p>
 <ul>
-<li><p>Imaging data analysis, image regression, image decomposition</p>
+<li><p>Imaging data analysis, image regression, image clustering, image </p>
 </li>
 <li><p>High-dimensional data analysis, variable selection</p>
-</li>
-<li><p>Empirical Bayes methods</p>
 </li>
 </ul>
 </td>
