--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Email: longfeng AT cityu DOT edu DOT hk</p>
 <h2>Research</h2>
 <p>My research interests include </p>
 <ul>
-<li><p>Imaging data analysis, image regression, image clustering, image </p>
+<li><p>Imaging data analysis, image regression, image clustering, image denoising</p>
 </li>
 <li><p>High-dimensional data analysis, variable selection</p>
 </li>
