--- a/research.html
+++ b/research.html
@@ -23,23 +23,26 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> (2020+). "Projected Robust PCA with Application to Smooth Image Recovery
-". [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
+<li><p><b>Feng, L.</b> and Wang, J. (2020+). "Projected Robust PCA with Application to Smooth Image Recovery
+", under review, [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
 </li>
-<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2020). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association, 116(533):144-158 [<a href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2020.1766468">link</a>].</p>
+<li><p>Bi, X.*, <b>Feng, L.</b>*, Li, C*. and Zhang, H. (2020+)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", under minor revision, Journal of American Statistical Association (JASA). </p>
 </li>
-<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics, 47(6): 3069-3098. [<a href="https://projecteuclid.org/euclid.aos/1572487384">Journal link</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
+<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2020). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association (JASA), 116(533):144-158 [<a href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2020.1766468">link</a>].</p>
+</li>
+<li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics (AoS), 47(6): 3069-3098. [<a href="https://projecteuclid.org/euclid.aos/1572487384">Journal link</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
 </li>
 <li><p>Bi, X., <b>Feng, L.</b>, Wang, S., Lin, Z., Li, T., Zhao, B., Zhu, H. and Zhang, H. (2019)." Common Genetic Variants Influence Human Cortical Brain Regions and Risk of Schizophrenia", Genetic Epidemiology, 1-11. [<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gepi.22203">link</a>].</p>
 </li>
 <li><p><b>Feng, L.</b> and Dicker, L.H. (2018). "Approximate Nonparametric Maximum Likelihood
 Inference for Mixture Models via Convex Optimization",  Computational Statistics
-&amp; Data Analysis, 122, 80-91. [<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>].</p>
+&amp; Data Analysis (CSDA), 122, 80-91. [<a href="https://www.sciencedirect.com/science/article/pii/S0167947318300070">link</a>].</p>
 </li>
 <li><p><b>Feng, L.</b>, Ma, R. and Dicker, L.H. (2017). "Nonparametric Maximum Likelihood
 Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>].</p>
 </li>
 </ul>
+<p>* stands for alphabetical order</p>
 </td>
 </tr>
 </table>
