--- a/research.html
+++ b/research.html
@@ -23,11 +23,18 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b> and Wang, J. (2020+). "Projected Robust PCA with Application to Smooth Image Recovery
-", under review, [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
-</li>
 <li><p>Bi, X.*, <b>Feng, L.</b>*, Li, C*. and Zhang, H. (2020+)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", under minor revision, Journal of American Statistical Association (JASA). </p>
 </li>
+<li><p><b>Feng, L.</b> and Wang, J. (2020+). "Projected Robust PCA with Application to Smooth Image Recovery
+", under revision and resubmission at Journal of Machine Learning Research (JMLR), [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
+</li>
+</ul>
+<ul>
+<li><p><b>Wu, S.</b> and <b>Feng, L.</b>. (2020+). "SKPD: A General Framework of Signal Region Detection in Image Regression
+", revision submitted to Journal of Royal Statistical Society, series B (JRSSB).</p>
+</li>
+</ul>
+<ul>
 <li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2020). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association (JASA), 116(533):144-158 [<a href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2020.1766468">link</a>].</p>
 </li>
 <li><p><b>Feng, L.</b> and Zhang, C.-H. (2019). "Sorted Concave Penalized Regression", Annals of Statistics (AoS), 47(6): 3069-3098. [<a href="https://projecteuclid.org/euclid.aos/1572487384">Journal link</a>][<a href="http://arxiv.org/abs/1712.09941">arXiv version</a>].</p>
