--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,9 @@
 <div class="blockcontent">
 <h2>At CityU</h2>
 <ul>
-<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020</p>
+<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020, Spring 2021</p>
+</li>
+<li><p>SDSC 3007&ndash;Advanced Statistics, Fall 2021</p>
 </li>
 </ul>
 <h2>At Rutgers</h2>
