--- a/research.html
+++ b/research.html
@@ -20,6 +20,7 @@
 <div id="toptitle">
 <h1>Publications and Preprints</h1>
 </div>
+<p>* stands for alphabetical authorship. <br /> # stands for PhD students under my supervision.</p>
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
@@ -30,7 +31,7 @@
 </li>
 </ul>
 <ul>
-<li><p><b>Wu, S.</b> and <b>Feng, L.</b>. (2020+). "SKPD: A General Framework of Signal Region Detection in Image Regression
+<li><p><b>Wu, S.#</b> and <b>Feng, L.</b>. (2020+). "SKPD: A General Framework of Signal Region Detection in Image Regression
 ", revision submitted to Journal of Royal Statistical Society, series B (JRSSB).</p>
 </li>
 </ul>
@@ -49,7 +50,6 @@ Inference for Mixture Models via Convex Optimization",  Computational Statistics
 Approximate Message Passing", Information Sciences and Systems (CISS), 2017 51st Annual Conference on (pp. 1-6), IEEE. [<a href="http://ieeexplore.ieee.org/document/7926084">link</a>].</p>
 </li>
 </ul>
-<p>* stands for alphabetical order</p>
 </td>
 </tr>
 </table>
