--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ City University of Hong Kong<br />
 Email: longfeng AT cityu DOT edu DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University.  My current research interests focus on imaging data analysis, including image regression, image clustering, image denoising, region detection in image data, etc. I obtained my Ph.D in Statistics from Rutgers University. </p>
+<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on imaging data analysis, including image regression, image clustering, image denoising, region detection in image data, etc. I obtained my Ph.D in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
