--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Bi, X.*, <b>Feng, L.</b>*, Li, C*. and Zhang, H. (2021+)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", accepted, Journal of American Statistical Association (JASA). </p>
+<li><p>Bi, X.*, <b>Feng, L.</b>*, Li, C*. and Zhang, H. (2021+)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", just accepted, Journal of American Statistical Association (JASA). </p>
 </li>
 </ul>
 <ul>
