--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="menu-category">Long Feng</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
+<div class="menu-item"><a href="people.html">People</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 </td>
 <td id="layout-content">
