--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ City University of Hong Kong<br />
 Email: longfeng AT cityu DOT edu DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on imaging data analysis, including image regression, image clustering, image denoising, region detection in image data, etc. I obtained my Ph.D in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. </p>
+<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on image data analysis, convolutional neural networks, high-dimensional statistics, machine learning, etc. I obtained my Ph.D in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
@@ -40,9 +40,11 @@ Email: longfeng AT cityu DOT edu DOT hk</p>
 <h2>Research</h2>
 <p>My research interests include </p>
 <ul>
-<li><p>Imaging data analysis, image regression, image clustering, image denoising</p>
+<li><p>Image data analysis</p>
 </li>
-<li><p>High-dimensional data analysis, variable selection</p>
+<li><p>Deep neural networks</p>
+</li>
+<li><p>High-dimensional data analysis</p>
 </li>
 </ul>
 </td>
