--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,9 @@
 <div class="blockcontent">
 <h2>At CityU</h2>
 <ul>
-<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020, Spring 2021</p>
+<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020, Spring 2021, Spring 2022</p>
+</li>
+<li><p>SDSC 4016&ndash;Fundamentals of Machine Learning, Spring 2022</p>
 </li>
 <li><p>SDSC 3007&ndash;Advanced Statistics, Fall 2021</p>
 </li>
