--- a/research.html
+++ b/research.html
@@ -25,11 +25,6 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Feng, L.</b>  and  Wang, J. (2022+). "Projected Robust PCA with Application to Smooth Image Recovery
-", accepted under minor revision, Journal of Machine Learning Research (JMLR), [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
-</li>
-</ul>
-<ul>
 <li><p><b>Wu, S.</b>* and <b>Feng, L.</b>. (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
 ", revision submitted to Journal of Royal Statistical Society, series B (JRSSB).</p>
 </li>
@@ -38,6 +33,11 @@
 <li><p><b>Yang, G.</b>* and <b>Feng, L.</b>. (2022+). "Spatio-Temporal Data Clustering
 via Sparse Kronecker Product Decomposition
 ", under review, Statistica Sinica. </p>
+</li>
+</ul>
+<ul>
+<li><p><b>Feng, L.</b>  and  Wang, J. (2022+). "Projected Robust PCA with Application to Smooth Image Recovery
+", accepted, Journal of Machine Learning Research (JMLR), [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
