--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@ via Sparse Kronecker Product Decomposition
 </li>
 </ul>
 <ul>
-<li><p><b>Feng, L.</b>  and  Wang, J. (2022+). "Projected Robust PCA with Application to Smooth Image Recovery
+<li><p><b>Feng, L.</b>  and  Wang, J. (2022). "Projected Robust PCA with Application to Smooth Image Recovery
 ", accepted, Journal of Machine Learning Research (JMLR), [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
 </li>
 </ul>
