--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ City University of Hong Kong<br />
 Email: longfeng AT cityu DOT edu DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in the School of Data Science, City University of Hong Kong. Before joining CityU, I was a Postdoctoral Associate in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on image data analysis, convolutional neural networks, high-dimensional statistics, machine learning, etc. I obtained my Ph.D in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. </p>
+<p>I am an Assistant Professor in the Department of Statistics, University of Hong Kong. I obtained my PhD in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. After that, I did my Postdoctoral training in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on statistical machine learning, image data analysis, high-dimensional statistics, deep learning, etc. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
@@ -42,7 +42,7 @@ Email: longfeng AT cityu DOT edu DOT hk</p>
 <ul>
 <li><p>Image data analysis</p>
 </li>
-<li><p>Deep neural networks</p>
+<li><p>Deep learning</p>
 </li>
 <li><p>High-dimensional data analysis</p>
 </li>
