--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <table class="imgtable"><tr><td>
 <img src="bio.jpeg" alt="alt text" width="170px" height="170px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor <br /> 
-School of Data Science <br />
-City University of Hong Kong<br />
-Email: longfeng AT cityu DOT edu DOT hk</p>
+Department of Statistics <br />
+University of Hong Kong<br />
+Email: lfeng AT hku DOT hk</p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I am an Assistant Professor in the Department of Statistics, University of Hong Kong. I obtained my PhD in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. After that, I did my Postdoctoral training in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on statistical machine learning, image data analysis, high-dimensional statistics, deep learning, etc. </p>
