--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ University of Hong Kong<br />
 Email: lfeng@hku.hk</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in the Department of Statistics, University of Hong Kong. I obtained my PhD in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. After that, I did my Postdoctoral training in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on statistical machine learning, image data analysis, high-dimensional statistics, deep learning, etc. </p>
+<p>I am an Assistant Professor in the Department of Statistics and Actuarial Science, University of Hong Kong. I obtained my PhD in Statistics from Rutgers University, advised by Profs. Cun-Hui Zhang and Lee Dicker. After that, I did my Postdoctoral training in the Department of Biostatistics at Yale University, supervised by Prof. Heping Zhang.  My current research interests focus on statistical machine learning, image data analysis, high-dimensional statistics, deep learning, etc. </p>
 <h2>Education</h2>
 <ul>
 <li><p>2017, Ph.D. in Statistics, Rutgers University  </p>
