--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <table class="imgtable"><tr><td>
 <img src="bio.jpeg" alt="alt text" width="170px" height="170px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor <br /> 
-Department of Statistics <br />
+Department of Statistics and Actuarial Science <br />
 University of Hong Kong<br />
 Email: lfeng@hku.hk</p>
 </td></tr></table>
