--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
 <div class="blockcontent">
 <ul>
 <li><p><b>Wu, S.</b>* and <b>Feng, L.</b>. (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
-", invited revision at Journal of Royal Statistical Society, series B (JRSSB).</p>
+", under invited revision at Journal of Royal Statistical Society, series B (JRSSB).</p>
 </li>
 </ul>
 <ul>
