--- a/research.html
+++ b/research.html
@@ -25,23 +25,21 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p><b>Yang, G.</b>* and <b>Feng, L.</b>. (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review, Journal of Machine Learning Research. </p>
+</li>
+</ul>
+ <ul>
 <li><p><b>Wu, S.</b>* and <b>Feng, L.</b>. (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
 ", invited revision, Journal of Royal Statistical Society, series B (JRSSB).</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Yang, G.</b>* and <b>Feng, L.</b>. (2022+). "Spatio-Temporal Data Clustering
-via Sparse Kronecker Product Decomposition
-", under review, Statistica Sinica. </p>
-</li>
-</ul>
-<ul>
 <li><p><b>Feng, L.</b>  and  Wang, J. (2022). "Projected Robust PCA with Application to Smooth Image Recovery
-", accepted, Journal of Machine Learning Research (JMLR), [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
+", Journal of Machine Learning Research (JMLR), in press, [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
-<li><p>Bi, X.#, <b>Feng, L.</b>#, Li, C#. and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", accepted, Journal of American Statistical Association (JASA). [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
+<li><p>Bi, X.#, <b>Feng, L.</b>#, Li, C#. and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538),602-616 [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
 </li>
 </ul>
 <ul>
