--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Yang, G.</b>* and <b>Feng, L.</b>. (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review, Journal of Machine Learning Research. </p>
+<li><p><b>Yang, G.</b>* and <b>Feng, L.</b>. (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review, Journal of Machine Learning Research (JMLR). </p>
 </li>
 </ul>
  <ul>
