--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
 </ul>
 <ul>
 <li><p><b>Feng, L.</b>  and  Wang, J. (2022). "Projected Robust PCA with Application to Smooth Image Recovery
-", Journal of Machine Learning Research (JMLR), in press [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
+", Journal of Machine Learning Research (JMLR), in press. [<a href="https://arxiv.org/abs/2009.05478">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
