--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 </ul>
  <ul>
 <li><p><b>Wu, S.</b>* and <b>Feng, L.</b>. (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
-", invited revision, Journal of Royal Statistical Society, series B (JRSSB).</p>
+", Journal of Royal Statistical Society, series B (JRSSB),invited revision.</p>
 </li>
 </ul>
 <ul>
