--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 </ul>
  <ul>
 <li><p><b>Wu, S.</b>* and <b>Feng, L.</b>. (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
-", Journal of Royal Statistical Society, series B (JRSSB),invited revision.</p>
+", Journal of Royal Statistical Society, series B (JRSSB), invited revision.</p>
 </li>
 </ul>
 <ul>
@@ -39,11 +39,11 @@
 </li>
 </ul>
 <ul>
-<li><p>Bi, X.#, <b>Feng, L.</b>#, Li, C#. and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616 [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
+<li><p>Bi, X.#, <b>Feng, L.</b>#, Li, C#. and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2020). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association (JASA), 116(533):144-158 [<a href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2020.1766468">link</a>].</p>
+<li><p><b>Feng, L.</b>, Bi, X. and Zhang, H. (2020). "Brain Regions Identified as Being Associated with Verbal Reasoning through the Use of Imaging Regression via Internal Variation.", Journal of American Statistical Association (JASA), 116(533):144-158. [<a href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2020.1766468">link</a>].</p>
 </li>
 </ul>
 <ul>
