--- a/research.html
+++ b/research.html
@@ -25,11 +25,11 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Yang, G.</b>* and <b>Feng, L.</b>. (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review, Journal of Machine Learning Research (JMLR). </p>
+<li><p><b>Yang, G.</b>* and <b>Feng, L.</b> (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review, Journal of Machine Learning Research (JMLR). </p>
 </li>
 </ul>
  <ul>
-<li><p><b>Wu, S.</b>* and <b>Feng, L.</b>. (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
+<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
 ", Journal of Royal Statistical Society, series B (JRSSB), invited revision.</p>
 </li>
 </ul>
