--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Email: lfeng@hku.hk</p>
 <li><p>High-dimensional data analysis</p>
 </li>
 </ul>
+<h2>Propective Student</h2>
+<p>I am currently lookingly for PhD students and Postdocs. Welcome to drop me an email if interested.</p>
 </td>
 </tr>
 </table>
