--- a/teaching.html
+++ b/teaching.html
@@ -24,17 +24,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>SDSC 6001&ndash;Statistical Machine Learning, Spring 2020, Spring 2021, Spring 2022</p>
-</li>
-<li><p>SDSC 4016&ndash;Fundamentals of Machine Learning, Spring 2022</p>
-</li>
-<li><p>SDSC 3007&ndash;Advanced Statistics, Fall 2021</p>
-</li>
-</ul>
-<ul>
-<li><p>STAT 580&ndash;Basic Probability, Summer 2017</p>
-</li>
-<li><p>STAT 586&ndash;Interpretation of Data-I, Summer 2016</p>
+<li><p>STAT 3622&ndash;Data Visualization, Spring 2023</p>
 </li>
 </ul>
 </td>
