--- a/research.html
+++ b/research.html
@@ -29,8 +29,8 @@
 </li>
 </ul>
  <ul>
-<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2022+). "SKPD: A General Framework of Signal Region Detection in Image Regression
-", Journal of Royal Statistical Society, series B (JRSSB), invited revision.</p>
+<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2022+). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression
+", Journal of Royal Statistical Society, series B (JRSSB), invited revision，[<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
