--- a/research.html
+++ b/research.html
@@ -25,6 +25,10 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>*(2022+). "Deep Kronecker Network", under review. </p>
+</li>
+</ul>
+<ul>
 <li><p><b>Yang, G.</b>* and <b>Feng, L.</b> (2022+). "Region Detection and Image Clustering via Sparse Kronecker Product Decomposition", under review, Journal of Machine Learning Research (JMLR). </p>
 </li>
 </ul>
