--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2022+). "Deep Kronecker Network", under review. </p>
+<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2022+). "Deep Kronecker Network", under review. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>] </p>
 </li>
 </ul>
 <ul>
@@ -34,7 +34,7 @@
 </ul>
  <ul>
 <li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2022+). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression
-", Journal of Royal Statistical Society, series B (JRSSB), invited revision. [<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
+", Journal of Royal Statistical Society, series B (JRSSB), invited revision. [<a href="https://arxiv.org/abs/2210.09128">arXiv</a>]</p>
 </li>
 </ul>
 <ul>
