--- a/people.html
+++ b/people.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h1>PhD Students</h1>
 </div>
-<p>WU, Sanyou (2020-Present; BS, Tongji U, 2018; MS, SUFE,2020) <br /> YANG, Guang (2020-Present; BS, Renmin U, 2020)</p>
+<p>WU, Sanyou (2020-Present; BS, Tongji U; MS, SUFE) <br /> YANG, Guang (2020-Present; BS, Renmin U) <br /> Li, Zhenghao (2022-Present; BS, PKU, joint with Yin, G.)</p>
 </td>
 </tr>
 </table>
