--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2023+). "Deep Kronecker Network", Biometrika, under revision. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2023+). "Deep Kronecker Network", Biometrika, under minor revision. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
