--- a/research.html
+++ b/research.html
@@ -25,11 +25,11 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2023+). "Deep Kronecker Network", Biometrika, accepted. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2023). "Deep Kronecker Network", Biometrika, accepted. [<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
-<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3), 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
+<li><p><b>Wu, S.</b>* and <b>Feng, L.</b> (2023). "Sparse Kronecker Product Decomposition: A General Framework of Signal Region Detection in Image Regression", Journal of Royal Statistical Society, series B (JRSSB), 85(3): 783-809. [<a href="https://academic.oup.com/jrsssb/advance-article/doi/10.1093/jrsssb/qkad024/7145706">link</a>][<a href="https://arxiv.org/abs/2210.09128">arXiv</a>].</p>
 </li>
 </ul>
 <ul>
