--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2023). "Deep Kronecker Network", Biometrika, accepted. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
+<li><p> <b>Feng, L.</b> and <b>Yang, G.</b>* (2024). "Deep Kronecker Network", Biometrika, 111(2): 707-714. [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad049/7257066?redirectedFrom=fulltext">link</a>][<a href="https://arxiv.org/abs/2210.13327">arXiv</a>]. </p>
 </li>
 </ul>
  <ul>
