--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h1>Publications and Preprints</h1>
 </div>
-<p>* stands for PhD students under my supervision. <br /> # stands for alphabetical authorship. </p>
+<p>* stands for PhD students under my supervision. <br /> + stands for alphabetical authorship. </p>
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
@@ -38,7 +38,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Bi, X.#, <b>Feng, L.</b>#, Li, C#. and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
+<li><p>Bi, X.+, <b>Feng, L.</b>+, Li, C+. and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
 </li>
 </ul>
 <ul>
