--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Su, S.</b>*， <b>Li, Z.</b>*, <b>Feng, L.</b> and <b>Li, T.</b>* (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics, invited revision. </p>
+<li><p> <b>Su, S.</b>*, <b>Li, Z.</b>*, <b>Feng, L.</b> and Li, T.* (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics, invited revision. </p>
 </li>
 </ul>
 <ul>
