--- a/people.html
+++ b/people.html
@@ -21,7 +21,7 @@
 <div id="toptitle">
 <h1>PhD Students</h1>
 </div>
-<p>WU, Sanyou (2020-Present; BS, Tongji U; MS, SUFE) <br /> YANG, Guang (2020-Present; BS, Renmin U) <br /> Li, Zhenghao (2022-Present; BS, PKU)</p>
+<p>WU, Sanyou (2020-Present; BS, Tongji U; MS, SUFE) <br /> YANG, Guang (2020-Present; BS, Renmin U) <br /> Li, Zhenghao (2022-Present; BS, PKU)<br /> Su, Siqiang (2022-Present; BS, PolyU; MS, Yale)</p>
 </td>
 </tr>
 </table>
