--- a/research.html
+++ b/research.html
@@ -21,11 +21,11 @@
 <div id="toptitle">
 <h1>Publications and Preprints</h1>
 </div>
-<p>* stands for PhD students. &nbsp   # stands for alphabetical authorship. </p>
+<p>* stands for PhD students. &nbsp   # stands for corresponding author. &nbsp + stands for alphabetical authorship. </p>
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p> <b>Su, S.</b>*, <b>Li, Z.</b>*, <b>Feng, L.</b> and Li, T. (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), invited revision. </p>
+<li><p> <b>Su, S.</b>*, <b>Li, Z.</b>*, <b>Feng, L.</b><sup>#</sup> and Li, T. (2024+). "A General Framework of Brain Region Detection and Genetic Variants Selection in Imaging Genetics", Annals of Applied Statistics (AoAS), invited revision. </p>
 </li>
 </ul>
 <ul>
@@ -42,7 +42,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Bi, X.<sup>#</sup>, <b>Feng, L.</b><sup>#</sup>, Li, C.<sup>#</sup> and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
+<li><p>Bi, X.<sup>+</sup>, <b>Feng, L.</b><sup>+</sup>, Li, C.<sup>+</sup> and Zhang, H. (2021)." Modeling Pregnancy Outcomes through Sequentially Nested Regression Models", Journal of American Statistical Association (JASA), 117(538): 602-616. [<a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2021.2006666">link</a>].</p>
 </li>
 </ul>
 <ul>
